# Loan-Creditworthiness-classification-IIT-ROPAR-Hackathon

./: .dockerignore  Dockerfile  README.md  app.py  lables.json  pyproject.toml
.github/workflows/: dockerhub-push.yml
Archives/: data_manager.ipynb  eda_advance.ipynb  eda_and_fe.ipynb  lazy_modeling.ipynb  modeling.ipynb
Reports/: Final Report.docx  Ordinal_data_ranks.csv  data_merged.html  final.html
data/: data_merged.csv
data/Preprocessed/: clean_data.csv  data_wo_missing_cell.csv  encoded.csv  final.csv
src/: data_processing.py  list to df.ipynb  model_training.py  preprocessing.ipynb  streamlit_app.py  streamlit_pipeline.py  test_pipeline.py  visualisation.py
